# flac

./: .copier-answers-py.yaml  .coveragerc  .gitignore  .npmrc  .pre-commit-config.yaml  .yarnrc.yml  AGENTS.md  MANIFEST.in  README.md  bunfig.toml  copier.yaml  docker-compose.yaml  env-config.yaml  flac-cc.py  flac_cc.py  hatch.toml  mise.toml  noxfile.py  pnpm-workspace.yaml  prek.toml  pyproject.toml  pytest.ini  readme.md  requirements.txt  ruff.toml  setup.py  test-cc.py  todo.txt  uv.toml
.circleci/: config.yml
.github/workflows/: nox.yaml  pypi.yaml
flac/: app.py  cli.py  config.py  database.py  model.py  testing.py  version.py
flac-app-cc/: MANIFEST.in  cookiecutter.json  docker-compose.yaml  readme.md  setup.py  tox.ini  {{cookiecutter.project_namespace}}-config.py
flac-app-cc/{{cookiecutter.project_folder}}/: .gitignore  .pre-commit-config.yaml  .rtx.toml  MANIFEST.in  docker-compose.yaml  pyproject.toml  readme.md  setup.py  tox.ini  {{cookiecutter.project_namespace}}-config.py  {{cookiecutter.project_pymod}}-config.py
flac-app-cc/{{cookiecutter.project_folder}}/.circleci/: config.yml
flac-app-cc/{{cookiecutter.project_folder}}/requirements/: Makefile  common.in  compile.py  dev.in  production.in
flac-app-cc/{{cookiecutter.project_folder}}/scripts/: count-heads.py  shiv-build  shiv-preamble.py
flac-app-cc/{{cookiecutter.project_folder}}/shiv/: preamble.py
flac-app-cc/{{cookiecutter.project_folder}}/{{cookiecutter.project_namespace}}/: app.py  cli.py  conftest.py  views.py
flac-app-cc/{{cookiecutter.project_folder}}/{{cookiecutter.project_namespace}}/model/: entities.py  utils.py
flac-app-cc/{{cookiecutter.project_folder}}/{{cookiecutter.project_namespace}}/tests/: test_cli.py  test_model.py  test_views.py
flac-app-cc/{{cookiecutter.project_folder}}/{{cookiecutter.project_pymod}}/: app.py  ext.py
flac-app-cc/{{cookiecutter.project_folder}}/{{cookiecutter.project_pymod}}/tests/: test_cli.py
flac-app-cc/{{cookiecutter.project_namespace}}/: app.py  cli.py  conftest.py
flac-app-cc/{{cookiecutter.project_namespace}}/model/: entities.py
flac-app-cc/{{cookiecutter.project_namespace}}/tests/: test_cli.py  test_model.py
flac/contrib/: sentry.py  shiv.py  sqlalchemy.py
flac/tests/: test_cli.py
flac_ta/: app.py  cli.py  ext.py  model.py  web.py
flac_ta/tests/: conftest.py  test_cli.py  test_model.py
mise-tasks/: bootstrap  bump  flac-cc
requirements/: base.txt  ci.in  ci.txt  dev.in  dev.txt  sqlalchemy.txt  test.in  test.txt
src/: conftest.py
src/flac/: app.py  cli.py  config.py  database.py  logging.py  model.py  utils.py  version.py
src/flac-app-cc/: cookiecutter.json
src/flac-app-cc/{{cookiecutter.project_folder}}/: .editorconfig  .flake8  .gitignore  docker-compose.yaml  pyproject.toml  tasks.py
src/flac-app-cc/{{cookiecutter.project_folder}}/.circleci/: config.yml
src/flac-app-cc/{{cookiecutter.project_folder}}/requirements/: bootstrap.py  common.in  dev.in  shiv.in
src/flac-app-cc/{{cookiecutter.project_folder}}/scripts/: codecov-verify
src/flac-app-cc/{{cookiecutter.project_folder}}/{{cookiecutter.project_pymod}}/: app.py  conftest.py  ext.py
src/flac-app-cc/{{cookiecutter.project_folder}}/{{cookiecutter.project_pymod}}/model/: entities.py
src/flac-app-cc/{{cookiecutter.project_folder}}/{{cookiecutter.project_pymod}}/tests/: test_model.py
src/flac-app-tpl/: {% if generate_pyproject %}pyproject.toml{% endif %}.jinja
src/flac-app-tpl/src/: {{ py_module }}-config.py.jinja
src/flac-app-tpl/src/{{ py_module }}/: __main__.py.jinja  app.py.jinja  cli.py.jinja  ext.py.jinja  views.py.jinja
src/flac-app-tpl/src/{{ py_module }}/model/: entities.py.jinja  utils.py
src/flac-app-tpl/tests/{{ py_module }}_tests/: conftest.py.jinja  test_cli.py.jinja  test_model.py.jinja  test_views.py.jinja
src/flac/contrib/: gunicorn.py  shiv.py  sqlalchemy.py
src/flac/tests/: test_app.py  test_cli.py  test_config.py
src/flac_tests/: test_app.py  test_cli.py  test_config.py  test_contrib_sqlalchemy.py
src/flac_tests/apps/: alpha.py
src/flac_tests/data/: config.py  config2.py
tasks/: bootstrap  bump  flac-cc  mise-uv-init.py
tests/: conftest.py
tests/flac_tests/: test_app.py  test_config.py  test_template.py  test_version.py
tests/flac_tests/apps/: alpha.py
