[build-system]
requires = [
    'hatchling',
    'hatch-requirements-txt',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'flask-flac'
description = 'Flask based library to help structure an application with an eye towards CLI apps, not just web.'
authors = [
    {name = 'Randy Syring', email = 'randy@syrings.us'},
]
dynamic = ['dependencies', 'optional-dependencies', 'version']
readme = 'readme.md'
license = "MIT"

[project.scripts]
'flac-cc' = 'flac_cc:cli'
