[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'flask-flac'
description = 'Flask based library to help structure an application with an eye towards CLI apps, not just web.'
authors = [
    {name = 'Randy Syring', email = 'randy@syrings.us'},
]
requires-python = '>=3.12'
dynamic = ['version']
readme = 'readme.md'
license = "MIT"
dependencies = [
    "flask>=3.1.1",
    "platformdirs>=4.3.8",
    "python-json-logger>=3.3.0",
]

[project.optional-dependencies]
sqlalchemy = [
    "arrow>=1.3.0",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy-utils>=0.41.2",
    "wrapt>=1.17.2",
]

[dependency-groups]
# Note: keeping Coppy deps grouped separate from app deps should help avoid unnecessary
# conflicts when upgrading to the latest Coppy template.
dev = [
    # From Coppy:
    {include-group = "tests"},
    {include-group = "pre-commit"},
    {include-group = "audit"},
    {include-group = "nox"},
    'click>=8.1.8',
    'hatch>=1.14.0',
    'ruff>=0.9.6',

    # App specific:
    # TODO: fill in app deps here
]
# Used by nox
tests = [
    # From Coppy:
    'pytest>=8.3.4',
    'pytest-cov>=6.0',
    # App specific:
    'faker',
    # These are needed to test the SA contrib module.  It would be cleaner to reference the
    # "sqlalchem" optional dependency group here but I'm not sure that's possible.
    "arrow>=1.3.0",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy-utils>=0.41.2",
    "wrapt>=1.17.2",
]
# Used by nox
pre-commit = [
    # From Coppy:
    'pre-commit>=4.1.0',
    'pre-commit-uv>=4.1.4',
]
# Used by nox
audit = [
    # From Coppy:
    'pip-audit>=2.8.0',
]
# Used by CI
nox = [
    'nox>=2025.2.9',
]
