[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'flask-flac'
description = 'Flask based library to help structure an application with an eye towards CLI apps, not just web.'
authors = [
    {name = 'Randy Syring', email = 'randy@syrings.us'},
]
requires-python = '>=3.11'
dynamic = ['version']
readme = 'readme.md'
license = 'MIT'
dependencies = [
    'flask>=3.1.1',
    'platformdirs>=4.3.8',
    'python-json-logger>=3.3.0',
]

[project.optional-dependencies]
sqlalchemy = [
    'arrow>=1.3.0',
    'flask-sqlalchemy>=3.1.1',
    'sqlalchemy-utils>=0.41.2',
    'wrapt>=1.17.2',
]


[dependency-groups]
# Note: keeping Coppy deps grouped separate from app deps should help avoid unnecessary
# conflicts when upgrading to the latest Coppy template.
dev = [
    {include-group = "pytest"},
    {include-group = "prek"},
    {include-group = "audit"},
    {include-group = "nox"},
    "build>=1.5.0",
    'click>=8.1.8',
    'ruff>=0.14.2',
    # App specific:
    # TODO: fill in app deps here
]
# Used by nox
pytest = [
    'pytest>=8.3.4',
    'pytest-cov>=6.0',
    'faker',
    # These are needed to test the SA contrib module. It would be cleaner to reference the
    # "sqlalchemy" optional dependency group here but I'm not sure that's possible.
    'arrow>=1.3.0',
    'flask-sqlalchemy>=3.1.1',
    'sqlalchemy-utils>=0.41.2',
    'wrapt>=1.17.2',
    "copier>=9.15.1",
]
# Used by nox
prek = [
    'prek',
]
# Used by nox
audit = [
    'pip-audit>=2.8.0',
]
# Used by CI
nox = [
    'nox>=2025.2.9',
]
