[build-system]
# https://flit.pypa.io/en/stable/rationale.html
build-backend = "flit_core.buildapi"
# https://flit.pypa.io/en/stable/index.html#usage
requires = ["flit_core >=3.2,<4"]

[project]
name = "{{ cookiecutter.project_name }}"
description = ""
authors = [{name = "{{cookiecutter.developer_name}}", email = "{{cookiecutter.developer_email}}"}]
# license = {file = "LICENSE"}
# classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]

[project.scripts]
{{cookiecutter.project_cli_bin}} = "{{cookiecutter.project_pymod}}.app:cli"

# Uncomment for library.  Probably delete for app.
# [project.urls]
# Home = "https://github.com/{{cookiecutter.gh_repo_path}}"

[tool.black]
skip-string-normalization = true
line-length = 100
target-version = ['{{cookiecutter.python_tox}}']

[tool.flit.module]
name = "{{ cookiecutter.project_pymod }}"

[tool.ruff]
fixable = ['I', 'Q', 'C4', 'SIM']
line-length = 100
ignore = [
    'A003'  # Class attribute is hadowing a Python builtin
]
select = [
    'E',   # ruff default: pycodestyle errors
    'W',   # pycodestyle warnings
    'F',   # ruff default: pyflakes
    'I',   # isort
    'Q',   # flake8-quotes
    'UP',  # pyupgrade
    'YTT', # flake8-2020
    'B',   # flake8-bandit
    'A',   # flake8-builtins
    'C4',  # flake8-comprehensions
    #'DTZ',  # flake8-datetimez - maybe enable eventually
    'T10',  # flake8-debugger
    'DJ',  # flake8-django
    'EXE',  # flake8-executable
    'PIE',  # flake8-pie
    'PTH',  # flake8-pathlib
    # 'ERA',  # flake8-eradicate - maybe enable eventually
    'RUF',  # ruff specific
]
src = ['src']
target-version = ['{{cookiecutter.python_tox}}']

[tool.ruff.per-file-ignores]
# Example
# 'src/core/migrations/0001_initial.py' = ['E501']

[tool.ruff.flake8-builtins]
builtins-ignorelist = ['id', 'help']


[tool.ruff.isort]
lines-after-imports = 2
force-sort-within-sections = true
known-first-party = ['{{ cookiecutter.project_pymod }}']


[tool.ruff.flake8-quotes]
# Prefer using different quote to escaping strings
avoid-escape = true
inline-quotes = 'single'
